UI layout for suggestions

--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -9,7 +9,7 @@
            <a  class="dropdown-item" routerLink="/listing">Job Board</a>
         </li>
         <li  class="li-arenella-nav" *ngIf="!isAuthenticated()">
-           <a  class="dropdown-item" routerLink="/view-candidates">Login</a>
+           <a  class="dropdown-item" routerLink="/suggestions">Login</a>
         </li>
 		<li  class="li-arenella-nav" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item" routerLink="/about">About</a>
