active subscription flag backend implementation

--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -29,6 +29,7 @@
 	            	    <th class="bg-tab-hdr">Email</th>
 	                	<th class="bg-tab-hdr">Company</th>
 	                	<th class="bg-tab-hdr">Actions</th>
+	                	<th class="bt-tab-hdr">Active Subscription</th>
 	      			</tr>
 	      		</thead>
 	      		<tbody>
@@ -40,6 +41,7 @@
 	            	    <td class="candidate-tab-col medicol">{{recruiter.email}}</td>
 	            	    <td class="candidate-tab-col medicol">{{recruiter.companyName}}</td>
 	            	    <td class="candidate-tab-col medicol"></td>
+	            	    <td class="candidate-tab-col medicol">{{recruiter.hasActiveSubscription}}</td>
 	      			</tr>	
 	      		</tbody>
 			</table>
