Admin recruiter screen update

--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -38,3 +38,21 @@ h3{
     font-size:12px;
     font-weight:bold;
 }
+
+.recruiter-firstgen{
+	color:brown;
+}
+
+.recruiter-active-subscription{
+	color:green;
+}
+
+.recruiter-expired-subscription{
+	color:red;
+}
+
+.recruiter-trial-subscription{
+	color:blue;
+}
+
+
