--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -48,8 +48,8 @@
 					<td><button class="btn btn-secondary btn-action" (click)="toggleShowFirstGenActiveSubscription()">Toggle</button></td>
 				</tr>
 				<tr>
-					<td>Total</td>
-					<td>{{recruiters.length}}</td>
+					<td>Total  / Total active</td>
+					<td>{{recruiters.length}} / <span>{{getTotalActiveRecruiters()}}</span></td>
 				</tr>
 			</tbody>
 		</table>
