--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.css
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.css
@@ -1,33 +1,10 @@
-.wholepagerow {
-    margin: 0 auto;
-    width:100%
-}
-
-.centerdiv{
-    margin: 0 auto;
-    padding-left:10px;
-    padding-right:10px;
-    width:90%;
-}
-
-.center-table{
-    margin:0 auto;
-    margin-top:25px;
-}
-
-.recruiter-signup-box-info {
-	float:right;
-	padding:5px;
-	max-width:40%;
-	min-width:40%;
-	margin-right:10%;
-}
-
-.recruiter-signup-box {
+.segment{
+	width:30%;
+	padding-top:20px;
+	padding-left:20px;
+	padding-right:5px;
 	float:left;
-	padding:5px;
-	margin-left:10%;
-	margin-right:20px;
+	min-width:350px;
 }
 
 .tb-lbl{
@@ -35,7 +12,7 @@
 }
 
 .inpt-tab-std{
-	max-width:250px;
+	max-width:240px;
 }
 
 .highlight{
