--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -27,11 +27,19 @@
 						
 						<div>
 							
+							<div>
+								<ul class="contract-type-filter">
+									<li><span class="{{getFilterTypeClass('CONTRACT_ROLE')}}" 	(click)="updateContractTypeFilter('Contract')"></span>Contract</li>
+									<li><span class="{{getFilterTypeClass('PERM_ROLE')}}" 	 	(click)="updateContractTypeFilter('Perm')"></span>Perm</li>
+									<li><span class="{{getFilterTypeClass('')}}" 		 		(click)="updateContractTypeFilter('')"></span>Both</li>
+								</ul>
+							</div>
+							
 							<div *ngFor="let listing of listings" class="listing" (click)="showListingDetails(listing)">
 							
 								<table >
 									<tr>
-										<td class="listing-table-td"  width="5%" >
+										<td class="listing-table-td">
 											<span title="{{listing.listingId}}" *ngIf="listing.country === 'NETHERLANDS'"  	class="flag-icon flag-icon-nl suggestion-flag-country listing-country"></span>
 											<span title="{{listing.listingId}}" *ngIf="listing.country === 'BELGIUM'"		class="flag-icon flag-icon-be suggestion-flag-country listing-country"></span>
 											<span title="{{listing.listingId}}" *ngIf="listing.country === 'UK'"			class="flag-icon flag-icon-gb suggestion-flag-country listing-country"></span>
@@ -39,9 +47,7 @@
 											<span title="{{listing.listingId}}" *ngIf="listing.country === 'EU_REMOTE'"		class="flag-icon flag-icon-eu suggestion-flag-country listing-country"></span>
 											<span title="{{listing.listingId}}" *ngIf="listing.country === 'WORLD_REMOTE'"	class="flag-icon flag-icon-xx suggestion-flag-country listing-country"></span>	
 										</td>
-										<td class="listing-table-td-date" 	width="15%" ><b>{{listing.created | date:'MMM-dd'}}</b></td>
-										<td class="listing-table-td-date" 	width="15%" ><b>{{getContractType(listing.type)}}</b></td>
-										<td class="listing-table-td" 		width="60%" >{{listing.title}}</td>
+										<td class="listing-table-td listing-title">{{listing.title}}</td>
 									</tr>
 								</table>
 								
