--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -1,171 +1,131 @@
 <div>
-    <div class="centerdiv">
-        <div class="center-table">
 	<form [formGroup]="formBean">
-
-		<div class="wholepage">
-			<div class="centerdiv" >
-				
-				<div class="row wholepagerow">
-					<div class="col halpagecolX">
-
-						<div class="row rowadduser">
-							<div class="col bg-tab-hdr">User</div>
-						</div>
-						
-						<div class="row rowadduser">
-							<div class="col hdr_label">Curriculum</div>
-							<div class="col">
-								<input type="file" style="padding-right:45px" (change)="uploadCurriculumFile($event)">
-							</div>
-						</div>
-						
-						<div class="row rowadduser">
-							<div class="col hdr_label">Candidate Id</div>
-							<div class="col"><input type="text" class="inpt-tab-std" formControlName="candidateId"/></div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">First name</div>
-							<div class="col"><input type="text" class="inpt-tab-std" formControlName="firstname"/></div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Surname</div>
-							<div class="col"><input type="text" class="inpt-tab-std" formControlName="surname"/></div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">email</div>
-							<div class="col"><input type="text" class="inpt-tab-std" formControlName="email"/></div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Country</div>
-							<div class="col">
-								<select class="inpt-tab-std" formControlName="country" (change)="updateCountry()">
-									<option>NETHERLANDS</option>
-									<option>BELGIUM</option>
-									<option>UK</option>
-								</select>
-							</div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">City</div>
-							<div class="col"><input type="text" class="inpt-tab-std" formControlName="city"/></div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Dutch</div>
-								<div class="col">
-									<select class="inpt-tab-std" formControlName="dutch">
-										<option value="NO">No</option>
-										<option value="YES">Yes</option>
-										<option value="BASIC">Basic</option>
-									</select>
-								</div>
-						</div>
-
-						<div class="row rowadduser">
-
-							<div class="col hdr_label">English</div>
-								<div class="col">
-									<select class="inpt-tab-std" formControlName="english">
-										<option value="NO">No</option>
-										<option value="YES">Yes</option>
-										<option value="BASIC">Basic</option>
-									</select>
-								</div>
-
-						</div>
-
-						<div class="row rowadduser">
-
-							<div class="col hdr_label">French</div>
-								<div class="col">
-									<select class="inpt-tab-std" formControlName="french">
-										<option value="NO">No</option>
-										<option value="YES">Yes</option>
-										<option value="BASIC">Basic</option>
-									</select>
-								</div>
-
-						</div>
-
-					</div>
-
-					<div class="col halpagecol">
-
-						<div class="row rowadduser">
-							<div class="col bg-tab-hdr">Function</div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Permanent</div>
-							<div class="col">
-								<select class="inpt-tab-std" formControlName="perm">
-									<option value="FALSE">No</option>
-									<option value="TRUE">Yes</option>
-									<option value="UNKNOWN">Unknown</option>
-								</select>
-							</div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Freelance</div>
-							<div class="col">
-								<select class="inpt-tab-std" formControlName="freelance">
-									<option value="FALSE">No</option>
-									<option value="TRUE">Yes</option>
-									<option value="UNKNOWN">Unknown</option>
-								</select>
-							</div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Function</div>
-							<div class="col">
-								<select formControlName="function" class="inpt-tab-std">
-									<option></option>
-									<option *ngFor="let f of functionTypes" [ngValue]="f.id">{{f.desc}}</option>
-								</select>
-							</div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Role Sought</div>
-							<div class="col"><input type="text" class="inpt-tab-std" formControlName="roleSought"/></div>
-						</div>
-
-
-						<div class="row rowadduser">
-							<div class="col hdr_label">Years Experience</div>
-							<div class="col"><input type="text" class="inpt-tab-std" formControlName="yearsExperience"/></div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col-sm-2 hdr_label">Skills</div>
-						</div>
-
-						<div class="row rowadduser">
-							<div class="col-sm-2"><textarea  class="skills" formControlName="skills"></textarea></div>
-						</div>
-
-					</div>
-
+		<div class="new-candidate-group">
+			<div class="row">
+				<div class="new-camdidate-bg-tab-hdr">User</div>
+			</div>	
+			<div class="row ">
+				<div class="new-candidate-inpt-lbl">Curriculum</div>
+				<div>
+					<input type="file" style="padding-right:45px" (change)="uploadCurriculumFile($event)">
 				</div>
-				<div class="row" >
-						<div class="col"></div>
-						<div class="col hdr_label" style="text-align:right; margin-right:260px;"><button (click)="addCandidate()">Save</button></div>
+			</div>						
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">Candidate Id</div>
+				<div><input type="text" class="new-candidate-inpt" formControlName="candidateId"/></div>
+			</div>
+			<div class="row">
+					<div class="new-candidate-inpt-lbl">First name</div>
+					<div><input type="text" class="new-candidate-inpt" formControlName="firstname"/></div>
+				</div>
+			<div class="row">
+					<div class="new-candidate-inpt-lbl">Surname</div>
+					<div><input type="text" class="new-candidate-inpt" formControlName="surname"/></div>
+				</div>
+			<div class="row">
+					<div class="new-candidate-inpt-lbl">email</div>
+					<div><input type="text" class="new-candidate-inpt" formControlName="email"/></div>
+				</div>
+			<div class="row">
+					<div class="new-candidate-inpt-lbl">Country</div>
+					<div>
+						<select class="new-candidate-inpt" formControlName="country" (change)="updateCountry()">
+							<option>NETHERLANDS</option>
+							<option>BELGIUM</option>
+							<option>UK</option>
+						</select>
 					</div>
+				</div>
+			<div class="row">
+					<div class="new-candidate-inpt-lbl">City</div>
+					<div><input type="text" class="new-candidate-inpt" formControlName="city"/></div>
+				</div>
+			<div class="row">
+					<div class="new-candidate-inpt-lbl">Dutch</div>
+					<div>
+						<select class="new-candidate-inpt" formControlName="dutch">
+							<option value="NO">No</option>
+							<option value="YES">Yes</option>
+							<option value="BASIC">Basic</option>
+						</select>
+					</div>
+				</div>
+			<div class="row">
+					<div class="new-candidate-inpt-lbl">English</div>
+					<div>
+						<select class="new-candidate-inpt" formControlName="english">
+							<option value="NO">No</option>
+							<option value="YES">Yes</option>
+							<option value="BASIC">Basic</option>
+						</select>
+					</div>
+				</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">French</div>
+				<div>
+					<select class="new-candidate-inpt" formControlName="french">
+						<option value="NO">No</option>
+						<option value="YES">Yes</option>
+						<option value="BASIC">Basic</option>
+					</select>
+				</div>
 			</div>
 		</div>
-
+		<div class="new-candidate-group">
+			<div class="row">
+				<div class="new-camdidate-bg-tab-hdr">Function</div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">Permanent</div>
+				<div>
+					<select class="new-candidate-inpt" formControlName="perm">
+						<option value="FALSE">No</option>
+						<option value="TRUE">Yes</option>
+						<option value="UNKNOWN">Unknown</option>
+					</select>
+				</div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">Freelance</div>
+				<div>
+					<select class="new-candidate-inpt" formControlName="freelance">
+						<option value="FALSE">No</option>
+						<option value="TRUE">Yes</option>
+						<option value="UNKNOWN">Unknown</option>
+					</select>
+				</div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">Function</div>
+				<div>
+					<select formControlName="function" class="new-candidate-inpt">
+						<option></option>
+						<option *ngFor="let f of functionTypes" [ngValue]="f.id">{{f.desc}}</option>
+					</select>
+				</div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">Role Sought</div>
+				<div><input type="text" class="new-candidate-inpt" formControlName="roleSought"/></div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">Years Experience</div>
+				<div><input type="text" class="new-candidate-inpt" formControlName="yearsExperience"/></div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl">Skills</div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl"></div>
+				<div><textarea  class="new-candidate-skills" formControlName="skills"></textarea></div>
+			</div>
+			<div class="row">
+				<div class="new-candidate-inpt-lbl"></div>
+				<div class="new-candidate-inpt btn btn-secondary btn-action" (click)="addCandidate()">Save</div>
+			</div>
+			
+		</div>
 	</form>
-
-</div>
-</div>
 </div>
 
 <ng-template #feedbackBox let-modal>
@@ -221,7 +181,7 @@
 		</table>
 			
 	</div> 
-	</div>
+</div>
 	  
 	
 </ng-template>
