--- a/recruit-gui/src/app/new-candidate/new-candidate.component.css
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.css
@@ -97,7 +97,7 @@
 }
 
 .new-candidate-skills {
-    width:160%;
+    width:300px;
     height: 130px;
     text-align: top;
     margin-bottom: 20px;
