--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -28,3 +28,28 @@
 .action-buttons{
 	text-align:right;
 }
+
+.add-skill-btn{
+	width:50px;
+	margin-top:5px;
+	margin-left:5px;
+	padding-left:5px;
+	padding-right:5px;
+} 
+
+.selected-skill{
+	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:grey;
+ 	display:inline-block;
+ }
+ 
+.selected-skill:hover{
+ 	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:red;
+ 	cursor:pointer;
+ 	display:inline-block;
+ }
