--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -21,7 +21,10 @@
 			</p>
 			
 			<div class="action-buttons">
-				<button class="btn btn-secondary  alter-subscription-btn" (click)="switchTab('addSupply')">Offer new Candidate</button>
+				<button class="btn btn-secondary action-btn" (click)="showJustMyCandidates()" 	*ngIf="!showJustMyCandidatesActive">Just My Candidate</button>
+				<button class="btn btn-secondary action-btn" (click)="fetchOfferedCandidates()" *ngIf="showJustMyCandidatesActive">All Candidates</button>
+				<button class="btn btn-secondary action-btn" (click)="switchTab('addSupply')">Offer new Candidate</button>
+			
 			</div>
 			<!-- List of offered Candidates -->
 			<div>
@@ -32,14 +35,22 @@
 							<th class="bg-tab-hdr">Role</th>
 							<th class="bg-tab-hdr">Country</th>
 							<th class="bg-tab-hdr">Location</th>
+							<th class="bg-tab-hdr">Contract Type</th>
+							<th class="bg-tab-hdr" *ngIf="showJustMyCandidatesActive">Actions</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
+						<tr *ngFor="let candidate of offeredCandidates">
+							<td (click)="editOfferedCandidate(candidate)">{{candidate.created}}</td>
+							<td (click)="editOfferedCandidate(candidate)">{{candidate.candidateRoleTitle}}</td>
+							<td (click)="editOfferedCandidate(candidate)">{{candidate.country}}</td>
+							<td (click)="editOfferedCandidate(candidate)">{{candidate.location}}</td>
+							<td (click)="editOfferedCandidate(candidate)">{{candidate.contractType}}</td>
+							<td *ngIf="showJustMyCandidatesActive">
+								<button class="btn btn-secondary small-action-btn" (click)="editMyCandidate(candidate.id)">Edit</button>
+								<button class="btn btn-secondary small-action-btn" *ngIf="confirmDeleteCandidate != candidate.id"  (click)="deleteMyCandidate(candidate.id)">Delete</button>
+								<button class="btn btn-secondary small-action-btn small-action-btn-confirm-del" *ngIf="confirmDeleteCandidate === candidate.id" (click)="applyDeleteMyCandidate(candidate.id)">Confirm</button>
+							</td>
 						</tr>
 					</tbody>	
 				</table>
@@ -49,7 +60,8 @@
 		<div *ngIf="addSupply">
 			<h3>Add details of Candidate to make available to other recruiters</h3>
 			<div class="action-buttons">
-				<button class="btn btn-secondary  alter-subscription-btn" (click)="publishOfferedCandidate()">Publish</button>
+				<button class="btn btn-secondary  small-action-btn" (click)="publishOfferedCandidate()">Publish</button>
+				<button class="btn btn-secondary  small-action-btn" (click)="showOfferedCandidates()">Back</button>
 			</div>
 			<form [formGroup]="offeredCandidateFormBean">
 				<table class="table marketplace-table">
@@ -136,8 +148,128 @@
 					<tr>
 						<td>Description</td>
 						<td>
-							<input  formControlName="description" type="text"/>
+							<textarea formControlName="description"></textarea>
+						</td>
+					</tr>
+					<tr>
+						<td>Spoken Languages</td>
+						<td>
+							<select formControlName="language">
+								<option></option>
+								<option value="DUTCH">Dutch</option>
+								<option value="ENGLISH">English</option>
+								<option value="FRENCH">French</option>
+							</select>
+							<button (click)="addOfferedCandidateLanguage()" class="btn btn-secondary add-skill-btn">Add</button>
+							<div style="min-height:35px;">
+								<div class="selected-skill" *ngFor="let language of spokenLanguages" (click)="removeOfferedCandidateLanguage(language)">{{language}}</div>
+							</div>
 						</td>	
+					</tr>
+					<tr>
+						<td>Comments</td>
+						<td>
+							<textarea formControlName="comments"></textarea>
+						</td>	
+					</tr>
+				</table>
+			</form>
+		</div>
+		
+		<!-- Edit Supply -->
+		<div *ngIf="editSupply">
+			<h3>Update Candidate</h3>
+			<div class="action-buttons">
+				<button class="btn btn-secondary  small-action-btn" (click)="updateOfferedCandidate()">Publish</button>
+				<button class="btn btn-secondary  small-action-btn" (click)="showOfferedCandidates()">Back</button>
+			</div>
+			<form [formGroup]="offeredCandidateFormBean">
+				<table class="table marketplace-table">
+					<tr>
+						<td>Candidates Function</td>
+						<td>
+							<input formControlName="candidateRoleTitle" type="text"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Country</td>
+						<td>
+							<select formControlName="country">
+								<option></option>
+								<option value="BELGIUM">Belgium</option>
+								<option value="IRL">Ireland</option>
+								<option value="NETHERLANDS">Netherlands</option>
+								<option value="UK">UK</option>
+								<option value="EUROPE">EU</option>
+								<option value="WORLD">World</option>
+							</select>
+						</td>	
+					</tr>
+					<tr>
+						<td>Location</td>
+						<td>
+							<input  formControlName="location" type="text"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Contract Type</td>
+						<td>
+							<select  formControlName="contractType">
+								<option></option>
+								<option value="CONTRACT">Contract</option>
+								<option value="PERM">Perm</option>
+								<option value="BOTH">Both</option>
+							</select>
+						</td>	
+					</tr>
+					<tr>
+						<td>Max Days On Site (per Week)</td>
+						<td>
+							<select  formControlName="daysOnSite">
+								<option></option>
+								<option value="ZERO">Fully Remote</option>
+								<option value="ONE">1</option>
+								<option value="TWO">2</option>
+								<option value="THREE">3</option>
+								<option value="FOUR">4</option>
+								<option value="FIVE">5</option>
+							</select>
+						</td>	
+					</tr>
+					<tr>
+						<td>Renumeration</td>
+						<td>
+							<input  formControlName="renumeration" type="text"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Available From</td>
+						<td>
+						<input  formControlName="availableFromDate" type="date"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>
+							Skills
+						</td>
+						<td class="sugg-srch-bdy">
+							<input type="text" formControlName="skill"><button (click)="addOfferedCandidateSkill()" class="btn btn-secondary add-skill-btn">Add</button>
+							<div style="min-height:35px;">
+								<div class="selected-skill" *ngFor="let skill of coreSkills" (click)="removeOfferedCandidateSkill(skill)">{{skill}}</div>
+							</div>
+						</td>	
+					</tr>
+					<tr>
+						<td>Years Experience</td>
+						<td>
+							<input  formControlName="yearsExperience" type="text"/>
+						</td>	
+					</tr>
+					<tr>
+						<td>Description</td>
+						<td>
+							<textarea formControlName="description"></textarea>
+						</td>
 					</tr>
 					<tr>
 						<td>Spoken Languages</td>
